# affinetransforms

./: CMakeLists.txt  imgui.ini  vcpkg.json
include/: math3d.hpp
src/: main.cpp  math3d.cpp
tests/: math3d_tests.cpp
